# DawnSysA2A-application

./: .gitignore  DEVELOPMENT_PROGRESS.md  LICENSE  README.md  Start-A2A.ps1  Start-A2APlatform.ps1  Start-DawnGemma4.ps1  Start-DawnRust.ps1  VSCode运行说明.md  dawn.cmd  dawn.ps1  start-a2a-dev.ps1  start-a2a-simple.ps1  start-all.bat  start-backend.bat  start-cursor.bat  start-frontend.bat  start-in-vscode.bat
a2a_workflow_platform/: MIGRATION_STATUS.md  README.md  clean-templates.ps1  manage.py  package-lock.json  package.json  requirements.txt  vite.config.js
a2a_workflow_platform/a2a_client/: admin.py  agent_handlers.py  apps.py  models.py  serializers.py  test_simple.py  tests.py  urls.py  views.py  views_a2a.py
a2a_workflow_platform/a2a_client/migrations/: 0001_initial.py  0002_initial.py  0003_artifact_message_alter_agent_agent_type_part_task_and_more.py  0004_remove_task_session_id_alter_task_agent_and_more.py  0005_agent_a2a_endpoint_url_agent_a2a_version_and_more.py  0006_agentskill_authentication_required_and_more.py  (+1 more)
a2a_workflow_platform/a2a_platform/: asgi.py  settings.py  test_settings.py  urls.py  views.py  wsgi.py
a2a_workflow_platform/agents/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
a2a_workflow_platform/agents/api/: serializers.py  (+2 more)
a2a_workflow_platform/dashboard/: urls.py  views.py
a2a_workflow_platform/frontend/: apps.py  urls.py  views.py
a2a_workflow_platform/frontend_src/: .gitignore  App.vue  README.md  api-fix.js  create_placeholder_components.mjs  index.html  main.backup.js  main.js  package-lock.json  package.json  tsconfig.json  vite.config.js
a2a_workflow_platform/knowledgebase/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
a2a_workflow_platform/templates/: base.html  home.html
a2a_workflow_platform/users/: models.py  serializers.py  urls.py  views.py
a2a_workflow_platform/workflow/: consumers.py  engine.py  execution_engine.py  models.py  permissions.py  routing.py  serializers.py  urls.py  views.py
dawn_core/: Cargo.toml
dawn_core/src/: a2a.rs  agent_cards.rs  ap2.rs  app_state.rs  approval_center.rs  chat_ingress.rs  connectors.rs  control_center.rs  control_plane.rs  control_ui.rs  end_user_approvals.rs  gateway.rs  identity.rs  main.rs  marketplace.rs  node_attestation.rs  policy.rs  sandbox.rs  skill_registry.rs
dawn_mcu/: Cargo.toml
dawn_mcu/src/: main.rs  signer.rs
dawn_node/: Cargo.toml
dawn_node/src/: cli.rs  main.rs  managed_browser.rs  profile.rs
docs/: ap2_serial_signer_protocol.md  api_reference.md  dawn_rust_gateway_implementation.md  developer_guide.md  development_progress.md  gemma4_ollama_integration.md  user_manual.md
templates/frontend/: control_ui.html  profile.html
workflow/: models.py
workflow/migrations/: 0001_initial.py
(+168 files in other folders)
