[package]
name = "dawn_mcu"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
# Use ed25519-dalek for AP2 VDC Signing (compatible with no_std embedded)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

# Note: For actual flashing to ESP32, you would add:
# esp-idf-sys = { version = "0.34", features = ["bin"] }
# esp-idf-svc = "0.48"
